--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body{
 
 .line{
     width: 100%;
-    height: 2px;
+    height: 1px;
     border: none;
     background-color: #b3b3b3;
     margin-bottom: 45px;
@@ -48,7 +48,7 @@ body{
 
 .tile{
     width: 70px;
-    border: 1px solid #b3b3b3;
+    border: 2px solid #3a3a3c;
     height: 70px;
     display: flex;
     justify-content: center;
@@ -59,4 +59,19 @@ body{
     display: flex;
     flex-direction: column;
     gap: 9px;
+}
+
+.correct{
+    background-color: #008f00;
+    border-color: #008f00;
+}
+
+.absent{
+    background-color: #3a3a3c;
+    border-color: #3a3a3c;
+}
+
+.present{
+    background-color: #cbac25;
+    border-color: #cbac25;
 }
