--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     color: white;
     padding: 0;
     margin: 0;
+    position: relative;
 }
 
 body{
@@ -11,15 +12,17 @@ body{
     justify-content: center;
     flex-direction: column;
     align-items: center;
+   
 }
 
 .nav{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .word{
-    font-size: 36px;
+    font-size: 42px;
     font-weight: 600;
     letter-spacing: 3px;
     padding: 15px 0;
@@ -74,4 +77,14 @@ body{
 .present{
     background-color: #cbac25;
     border-color: #cbac25;
+}
+
+.tags{
+    font-size: 15px;
+    letter-spacing: normal;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    font-weight: 400;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
