--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ flip-out{
     gap: 10px;
 }
 
-.key{
+.keyboard .key{
     width: 50px;
     height: 50px;
     border-radius: 4px;
@@ -152,4 +152,19 @@ flip-out{
     background-color: #818384;
     cursor: pointer;
     font-weight: bolder;
+}
+
+.key.correct{
+    background-color: #008f00;
+    border-color: #008f00;
+}
+
+.key.absent{
+    background-color: #3a3a3c;
+    border-color: #3a3a3c;
+}
+
+.key.present{
+    background-color: #cbac25;
+    border-color: #cbac25;
 }
