--- a/style.css
+++ b/style.css
@@ -178,3 +178,893 @@ flip-out{
     font-size: 20px;
     width: 80px;
 }
+
+@media screen and (max-width: 790px) {
+    *{
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #121213;
+        color: white;
+        padding: 0;
+        margin: 0;
+        position: relative;
+    }
+    
+    body{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+       
+    }
+    
+    .nav{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .word{
+        font-size: 42px;
+        font-weight: 600;
+        letter-spacing: 3px;
+        padding: 15px 0;
+    }
+    
+    .line{
+        width: 100%;
+        height: 1px;
+        border: none;
+        background-color: #b3b3b3;
+        margin-bottom: 45px;
+    }
+    
+    .guess{
+        display: grid;
+        grid-template-columns: repeat(5,1fr);
+        gap: 9px;
+        font-size: 28px;
+        font-weight:700;
+    }
+    
+    .tile{
+        width: 65px;
+        border: 2px solid #3a3a3c;
+        height: 65px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .tiles{
+        display: flex;
+        flex-direction: column;
+        gap: 9px;
+    }
+    
+    .correct{
+        background-color: #008f00;
+        border-color: #008f00;
+    }
+    
+    .absent{
+        background-color: #3a3a3c;
+        border-color: #3a3a3c;
+    }
+    
+    .present{
+        background-color: #cbac25;
+        border-color: #cbac25;
+    }
+    
+    .tags{
+        font-size: 17px;
+        letter-spacing: normal;
+        /* position: absolute;
+        bottom: -60px;
+        right: 15px; */
+        font-weight: 400;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    
+    @keyframes flip-in {
+        from{
+            transform: rotateX(0deg);
+        }
+        to{
+            transform: rotateX(-90deg);
+        }
+    }
+    
+    @keyframes flip-out {
+        from{
+            transform: rotateX(-90deg);
+        }
+        to{
+            transform: rotateX(0deg);
+        }
+    }
+    
+    .flip-in{
+        animation: flip-in 250ms;
+        animation-fill-mode: forwards;
+    }
+    
+    flip-out{
+        animation: flip-out 250ms;
+        animation-fill-mode: forwards;
+    }
+    
+    .keyboard{
+        display: flex;
+        flex-direction: column;
+        width: 32vw;
+        margin: 50px auto;
+        gap: 10px;
+        justify-content: center;
+        align-items: center;
+        font-size: 23px;
+    }
+    
+    .upper{
+        display: flex;
+        gap: 10px;
+    }
+    .mid{
+        display: flex;
+        gap: 10px;
+    }
+    .lower{
+        display: flex;
+        gap: 10px;
+    }
+    
+    .keyboard .key{
+        width: 45px;
+        height: 45px;
+        border-radius: 4px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 12px 5px; 
+        background-color: #818384;
+        cursor: pointer;
+        font-weight: bolder;
+    }
+    
+    .key.correct{
+        background-color: #008f00;
+        border-color: #008f00;
+    }
+    
+    .key.absent{
+        background-color: #3a3a3c;
+        border-color: #3a3a3c;
+    }
+    
+    .key.present{
+        background-color: #cbac25;
+        border-color: #cbac25;
+    }
+    
+    .key.enter{
+        font-size: 15px;
+        width: 72px;
+    }
+    
+    .key.del{
+        font-size: 17px;
+        width: 72px;
+    }
+}
+
+@media screen and (max-width: 690px) {
+    *{
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #121213;
+        color: white;
+        padding: 0;
+        margin: 0;
+        position: relative;
+    }
+    
+    body{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+       
+    }
+    
+    .nav{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .word{
+        font-size: 42px;
+        font-weight: 600;
+        letter-spacing: 3px;
+        padding: 15px 0;
+    }
+    
+    .line{
+        width: 100%;
+        height: 1px;
+        border: none;
+        background-color: #b3b3b3;
+        margin-bottom: 45px;
+    }
+    
+    .guess{
+        display: grid;
+        grid-template-columns: repeat(5,1fr);
+        gap: 9px;
+        font-size: 26px;
+        font-weight:700;
+    }
+    
+    .tile{
+        width: 55px;
+        border: 2px solid #3a3a3c;
+        height: 55px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .tiles{
+        display: flex;
+        flex-direction: column;
+        gap: 9px;
+    }
+    
+    .correct{
+        background-color: #008f00;
+        border-color: #008f00;
+    }
+    
+    .absent{
+        background-color: #3a3a3c;
+        border-color: #3a3a3c;
+    }
+    
+    .present{
+        background-color: #cbac25;
+        border-color: #cbac25;
+    }
+    
+    .tags{
+        font-size: 14px;
+        letter-spacing: normal;
+        /* position: absolute;
+        bottom: -60px;
+        right: 15px; */
+        font-weight: 400;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    
+    @keyframes flip-in {
+        from{
+            transform: rotateX(0deg);
+        }
+        to{
+            transform: rotateX(-90deg);
+        }
+    }
+    
+    @keyframes flip-out {
+        from{
+            transform: rotateX(-90deg);
+        }
+        to{
+            transform: rotateX(0deg);
+        }
+    }
+    
+    .flip-in{
+        animation: flip-in 250ms;
+        animation-fill-mode: forwards;
+    }
+    
+    flip-out{
+        animation: flip-out 250ms;
+        animation-fill-mode: forwards;
+    }
+    
+    .keyboard{
+        display: flex;
+        flex-direction: column;
+        width: 32vw;
+        margin: 50px auto;
+        gap: 10px;
+        justify-content: center;
+        align-items: center;
+        font-size: 19px;
+    }
+    
+    .upper{
+        display: flex;
+        gap: 10px;
+    }
+    .mid{
+        display: flex;
+        gap: 10px;
+    }
+    .lower{
+        display: flex;
+        gap: 10px;
+    }
+    
+    .keyboard .key{
+        width: 35px;
+        height: 35px;
+        border-radius: 4px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px 5px; 
+        background-color: #818384;
+        cursor: pointer;
+        font-weight: bolder;
+    }
+    
+    .key.correct{
+        background-color: #008f00;
+        border-color: #008f00;
+    }
+    
+    .key.absent{
+        background-color: #3a3a3c;
+        border-color: #3a3a3c;
+    }
+    
+    .key.present{
+        background-color: #cbac25;
+        border-color: #cbac25;
+    }
+    
+    .key.enter{
+        font-size: 13px;
+        width: 60px;
+    }
+    
+    .key.del{
+        font-size: 15px;
+        width: 60px;
+    }
+}
+
+@media screen and (max-width: 590px) {
+    *{
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #121213;
+        color: white;
+        padding: 0;
+        margin: 0;
+        position: relative;
+    }
+    
+    body{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+       
+    }
+    
+    .nav{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .word{
+        font-size: 35px;
+        font-weight: 600;
+        letter-spacing: 3px;
+        padding: 15px 0;
+    }
+    
+    .line{
+        width: 100%;
+        height: 1px;
+        border: none;
+        background-color: #b3b3b3;
+        margin-bottom: 45px;
+    }
+    
+    .guess{
+        display: grid;
+        grid-template-columns: repeat(5,1fr);
+        gap: 9px;
+        font-size: 26px;
+        font-weight:700;
+    }
+    
+    .tile{
+        width: 50px;
+        border: 2px solid #3a3a3c;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .tiles{
+        display: flex;
+        flex-direction: column;
+        gap: 9px;
+    }
+    
+    .correct{
+        background-color: #008f00;
+        border-color: #008f00;
+    }
+    
+    .absent{
+        background-color: #3a3a3c;
+        border-color: #3a3a3c;
+    }
+    
+    .present{
+        background-color: #cbac25;
+        border-color: #cbac25;
+    }
+    
+    .tags{
+        font-size: 14px;
+        letter-spacing: normal;
+        /* position: absolute;
+        bottom: -60px;
+        right: 15px; */
+        font-weight: 400;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    
+    @keyframes flip-in {
+        from{
+            transform: rotateX(0deg);
+        }
+        to{
+            transform: rotateX(-90deg);
+        }
+    }
+    
+    @keyframes flip-out {
+        from{
+            transform: rotateX(-90deg);
+        }
+        to{
+            transform: rotateX(0deg);
+        }
+    }
+    
+    .flip-in{
+        animation: flip-in 250ms;
+        animation-fill-mode: forwards;
+    }
+    
+    flip-out{
+        animation: flip-out 250ms;
+        animation-fill-mode: forwards;
+    }
+    
+    .keyboard{
+        display: flex;
+        flex-direction: column;
+        width: 32vw;
+        margin: 50px auto;
+        gap: 7px;
+        justify-content: center;
+        align-items: center;
+        font-size: 16px;
+    }
+    
+    .upper{
+        display: flex;
+        gap: 7px;
+    }
+    .mid{
+        display: flex;
+        gap: 7px;
+    }
+    .lower{
+        display: flex;
+        gap: 7px;
+    }
+    
+    .keyboard .key{
+        width: 25px;
+        height: 25px;
+        border-radius: 4px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px 5px; 
+        background-color: #818384;
+        cursor: pointer;
+        font-weight: bolder;
+    }
+    
+    .key.correct{
+        background-color: #008f00;
+        border-color: #008f00;
+    }
+    
+    .key.absent{
+        background-color: #3a3a3c;
+        border-color: #3a3a3c;
+    }
+    
+    .key.present{
+        background-color: #cbac25;
+        border-color: #cbac25;
+    }
+    
+    .key.enter{
+        font-size: 11px;
+        width: 50px;
+    }
+    
+    .key.del{
+        font-size: 13px;
+        width: 50px;
+    }
+}
+
+@media screen and (max-width: 440px) {
+    *{
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #121213;
+        color: white;
+        padding: 0;
+        margin: 0;
+        position: relative;
+    }
+    
+    body{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+       
+    }
+    
+    .nav{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .word{
+        font-size: 30px;
+        font-weight: 600;
+        letter-spacing: 3px;
+        padding: 15px 0;
+    }
+    
+    .line{
+        width: 100%;
+        height: 1px;
+        border: none;
+        background-color: #b3b3b3;
+        margin-bottom: 45px;
+    }
+    
+    .guess{
+        display: grid;
+        grid-template-columns: repeat(5,1fr);
+        gap: 5px;
+        font-size: 22px;
+        font-weight:700;
+    }
+    
+    .tile{
+        width: 40px;
+        border: 2px solid #3a3a3c;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .tiles{
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+    }
+    
+    .correct{
+        background-color: #008f00;
+        border-color: #008f00;
+    }
+    
+    .absent{
+        background-color: #3a3a3c;
+        border-color: #3a3a3c;
+    }
+    
+    .present{
+        background-color: #cbac25;
+        border-color: #cbac25;
+    }
+    
+    .tags{
+        font-size: 14px;
+        letter-spacing: normal;
+        /* position: absolute;
+        bottom: -60px;
+        right: 15px; */
+        font-weight: 400;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    
+    @keyframes flip-in {
+        from{
+            transform: rotateX(0deg);
+        }
+        to{
+            transform: rotateX(-90deg);
+        }
+    }
+    
+    @keyframes flip-out {
+        from{
+            transform: rotateX(-90deg);
+        }
+        to{
+            transform: rotateX(0deg);
+        }
+    }
+    
+    .flip-in{
+        animation: flip-in 250ms;
+        animation-fill-mode: forwards;
+    }
+    
+    flip-out{
+        animation: flip-out 250ms;
+        animation-fill-mode: forwards;
+    }
+    
+    .keyboard{
+        display: flex;
+        flex-direction: column;
+        width: 32vw;
+        margin: 25px auto;
+        gap: 5px;
+        justify-content: center;
+        align-items: center;
+        font-size: 13px;
+    }
+    
+    .upper{
+        display: flex;
+        gap: 5px;
+    }
+    .mid{
+        display: flex;
+        gap: 5px;
+    }
+    .lower{
+        display: flex;
+        gap: 5px;
+    }
+    
+    .keyboard .key{
+        width: 20px;
+        height: 20px;
+        border-radius: 4px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px 5px; 
+        background-color: #818384;
+        cursor: pointer;
+        font-weight: bolder;
+    }
+    
+    .key.correct{
+        background-color: #008f00;
+        border-color: #008f00;
+    }
+    
+    .key.absent{
+        background-color: #3a3a3c;
+        border-color: #3a3a3c;
+    }
+    
+    .key.present{
+        background-color: #cbac25;
+        border-color: #cbac25;
+    }
+    
+    .key.enter{
+        font-size: 9px;
+        width: 38px;
+    }
+    
+    .key.del{
+        font-size: 10px;
+        width: 38px;
+    }
+}
+
+@media screen and (width: 414px) and (height: 896px) {
+    *{
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #121213;
+        color: white;
+        padding: 0;
+        margin: 0;
+        position: relative;
+    }
+    
+    body{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+       
+    }
+    
+    .nav{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .word{
+        font-size: 30px;
+        font-weight: 600;
+        letter-spacing: 3px;
+        padding: 15px 0;
+    }
+    
+    .line{
+        width: 100%;
+        height: 1px;
+        border: none;
+        background-color: #b3b3b3;
+        margin-bottom: 45px;
+    }
+    
+    .guess{
+        display: grid;
+        grid-template-columns: repeat(5,1fr);
+        gap: 7px;
+        font-size: 32px;
+        font-weight:700;
+    }
+    
+    .tile{
+        width: 55px;
+        border: 2px solid #3a3a3c;
+        height: 55px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .tiles{
+        display: flex;
+        flex-direction: column;
+        gap: 7px;
+    }
+    
+    .correct{
+        background-color: #008f00;
+        border-color: #008f00;
+    }
+    
+    .absent{
+        background-color: #3a3a3c;
+        border-color: #3a3a3c;
+    }
+    
+    .present{
+        background-color: #cbac25;
+        border-color: #cbac25;
+    }
+    
+    .tags{
+        font-size: 14px;
+        letter-spacing: normal;
+        /* position: absolute;
+        bottom: -60px;
+        right: 15px; */
+        font-weight: 400;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    
+    @keyframes flip-in {
+        from{
+            transform: rotateX(0deg);
+        }
+        to{
+            transform: rotateX(-90deg);
+        }
+    }
+    
+    @keyframes flip-out {
+        from{
+            transform: rotateX(-90deg);
+        }
+        to{
+            transform: rotateX(0deg);
+        }
+    }
+    
+    .flip-in{
+        animation: flip-in 250ms;
+        animation-fill-mode: forwards;
+    }
+    
+    flip-out{
+        animation: flip-out 250ms;
+        animation-fill-mode: forwards;
+    }
+    
+    .keyboard{
+        display: flex;
+        flex-direction: column;
+        width: 32vw;
+        margin: 110px auto;
+        gap: 5px;
+        justify-content: center;
+        align-items: center;
+        font-size: 13px;
+    }
+    
+    .upper{
+        display: flex;
+        gap: 5px;
+    }
+    .mid{
+        display: flex;
+        gap: 5px;
+    }
+    .lower{
+        display: flex;
+        gap: 5px;
+    }
+    
+    .keyboard .key{
+        width: 22px;
+        height: 22px;
+        border-radius: 4px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px 5px; 
+        background-color: #818384;
+        cursor: pointer;
+        font-weight: bolder;
+    }
+    
+    .key.correct{
+        background-color: #008f00;
+        border-color: #008f00;
+    }
+    
+    .key.absent{
+        background-color: #3a3a3c;
+        border-color: #3a3a3c;
+    }
+    
+    .key.present{
+        background-color: #cbac25;
+        border-color: #cbac25;
+    }
+    
+    .key.enter{
+        font-size: 9px;
+        width: 39px;
+    }
+    
+    .key.del{
+        font-size: 10px;
+        width: 39px;
+    }
+}
