--- a/style.css
+++ b/style.css
@@ -33,13 +33,23 @@ body{
     cursor: pointer;
 }
 
-.line{
+.prime{
     width: 100%;
     height: 1px;
     border: none;
     background-color: #b3b3b3;
-    margin-bottom: 45px;
+    margin-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    align-items: center;
 }
+
+.remark{
+    font-weight: bolder;
+    letter-spacing: 2px;
+}
+
 
 .guess{
     display: grid;
@@ -177,6 +187,23 @@ flip-out{
 .key.del{
     font-size: 20px;
     width: 80px;
+}
+
+@keyframes jump {
+    0% {
+        transform: translateY(0);
+    }
+    50%{
+        transform: translateY(-20px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+.jump{
+    animation: jump 300ms;
+    animation-fill-mode: forwards;
 }
 
 @media screen and (max-width: 790px) {
